include/vsmc/vsmc.h

/// \defgroup C_API C API
/// @{

/// \defgroup C_API_RNG Random number generating
/// @{

/// \brief `vsmc::RNG`
typedef struct {
    int state[64];
} vsmc_rng;
/// \brief `std::chi_squared_distribution<double>`
void vsmc_rng_chi_squared(vsmc_rng *rng_ptr, int n, double *r, double df);
/// \brief `std::cachy_distribution<double>`
void vsmc_rng_cauchy(vsmc_rng *rng_ptr, int n, double *r, double a, double b);
/// \brief `std::fisher_f_distribution<double>`
void vsmc_rng_fisher_f(
    vsmc_rng *rng_ptr, int n, double *r, double df1, double df2);
/// \brief `std::student_t_distribution<double>`
void vsmc_rng_student_t(vsmc_rng *rng_ptr, int n, double *r, double df);
/// \brief `vsmc::LaplaceDistribution<double>`
void vsmc_rng_laplace(
    vsmc_rng *rng_ptr, int n, double *r, double location, double scal);
/// \brief `vsmc::StableDistribution<double>`
void vsmc_rng_stable(vsmc_rng *rng_ptr, int n, double *r, double stability,
    double skewness, double location, double scale);
/// \brief `vsmc::DiscreteDistribution<int>`
void vsmc_rng_discrete(vsmc_rng *rng_ptr, int n, int *r, int m,
    const double *weight, int normalized);
/// \brief `vsmc::u01_sorted`
void vsmc_rng_u01_sorted(int n, const double *u01, double *u01seq);
/// \brief `vsmc::u01_stratifed`
void vsmc_rng_u01_stratified(int n, const double *u01, double *u01seq);
/// \brief `vsmc::u01_systematic`
void vsmc_rng_u01_systematic(int n, double u01, double *u01seq);
/// @}

/// \defgroup C_API_MLK_BRNG Register MKL BRNG (`vsmc::mkl_brng`)
/// @{

int vsmc_mkl_brng_mt19937(void);
int vsmc_mkl_brng_minstd_rand0(void);
int vsmc_mkl_brng_minstd_rand(void);
int vsmc_mkl_brng_mt19937_64(void);
int vsmc_mkl_brng_ranlux24_base(void);
int vsmc_mkl_brng_ranlux48_base(void);
int vsmc_mkl_brng_ranlux24(void);
int vsmc_mkl_brng_ranlux48(void);
int vsmc_mkl_brng_knuth_b(void);
int vsmc_mkl_brng_xorshift1x32(void);
int vsmc_mkl_brng_xorshift2x32(void);
int vsmc_mkl_brng_xorshift4x32(void);
int vsmc_mkl_brng_xorshift8x32(void);
int vsmc_mkl_brng_xorshift16x32(void);
int vsmc_mkl_brng_xorshift32x32(void);
int vsmc_mkl_brng_xorshift64x32(void);
int vsmc_mkl_brng_xorshift128x32(void);
int vsmc_mkl_brng_xorshift1x64(void);
int vsmc_mkl_brng_xorshift2x64(void);
int vsmc_mkl_brng_xorshift4x64(void);
int vsmc_mkl_brng_xorshift8x64(void);
int vsmc_mkl_brng_xorshift16x64(void);
int vsmc_mkl_brng_xorshift32x64(void);
int vsmc_mkl_brng_xorshift64x64(void);
int vsmc_mkl_brng_xorwow1x32(void);
int vsmc_mkl_brng_xorwow2x32(void);
int vsmc_mkl_brng_xorwow4x32(void);
int vsmc_mkl_brng_xorwow8x32(void);
int vsmc_mkl_brng_xorwow16x32(void);
int vsmc_mkl_brng_xorwow32x32(void);
int vsmc_mkl_brng_xorwow64x32(void);
int vsmc_mkl_brng_xorwow128x32(void);