include/vsmc/vsmc.f90


    interface
        subroutine vsmc_rng_chi_squared(rng, n, r, df) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: df
        end subroutine vsmc_rng_chi_squared
    end interface

    interface
        subroutine vsmc_rng_cauchy(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: a
            real(kind = c_double), value :: b
        end subroutine vsmc_rng_cauchy
    end interface

    interface
        subroutine vsmc_rng_fisher_f(rng, n, r, df1, df2) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: df1
            real(kind = c_double), value :: df2
        end subroutine vsmc_rng_fisher_f
    end interface

    interface
        subroutine vsmc_rng_student_t(rng, n, r, df) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: df
        end subroutine vsmc_rng_student_t
    end interface

    interface
        subroutine vsmc_rng_laplace(rng, n, r, location, scal) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: location
            real(kind = c_double), value :: scal
        end subroutine vsmc_rng_laplace
    end interface

    interface
        subroutine vsmc_rng_stable(&
                rng, n, r, stability, skewness, location, scal) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: stability
            real(kind = c_double), value :: skewness
            real(kind = c_double), value :: location
            real(kind = c_double), value :: scal
        end subroutine vsmc_rng_stable
    end interface

    interface
        subroutine vsmc_rng_discrete(rng, n, r, m, weight, normalized) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            integer(kind = c_int), value :: m
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), value :: normalized
        end subroutine vsmc_rng_discrete
    end interface

    interface
        subroutine vsmc_rng_u01_sorted(n, u01, u01seq)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: u01
            real(kind = c_double), dimension(*) :: u01seq
        end subroutine vsmc_rng_u01_sorted
    end interface

    interface
        subroutine vsmc_rng_u01_stratified(n, u01, u01seq)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: u01
            real(kind = c_double), dimension(*) :: u01seq
        end subroutine vsmc_rng_u01_stratified
    end interface

    interface
        subroutine vsmc_rng_u01_systematic(n, u01, u01seq)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: n
            real(kind = c_double), value :: u01
            real(kind = c_double), dimension(*) :: u01seq
        end subroutine vsmc_rng_u01_systematic
    end interface

    interface
        function vsmc_mkl_brng_mt19937() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_mt19937
        end function vsmc_mkl_brng_mt19937
    end interface

    interface
        function vsmc_mkl_brng_minstd_rand0() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_minstd_rand0
        end function vsmc_mkl_brng_minstd_rand0
    end interface

    interface
        function vsmc_mkl_brng_minstd_rand() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_minstd_rand
        end function vsmc_mkl_brng_minstd_rand
    end interface

    interface
        function vsmc_mkl_brng_mt19937_64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_mt19937_64
        end function vsmc_mkl_brng_mt19937_64
    end interface

    interface
        function vsmc_mkl_brng_ranlux24_base() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ranlux24_base
        end function vsmc_mkl_brng_ranlux24_base
    end interface

    interface
        function vsmc_mkl_brng_ranlux48_base() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ranlux48_base
        end function vsmc_mkl_brng_ranlux48_base
    end interface

    interface
        function vsmc_mkl_brng_ranlux24() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ranlux24
        end function vsmc_mkl_brng_ranlux24
    end interface

    interface
        function vsmc_mkl_brng_ranlux48() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ranlux48
        end function vsmc_mkl_brng_ranlux48
    end interface

    interface
        function vsmc_mkl_brng_knuth_b() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_knuth_b
        end function vsmc_mkl_brng_knuth_b
    end interface

    interface
        function vsmc_mkl_brng_xorshift1x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift1x32
        end function vsmc_mkl_brng_xorshift1x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift2x32
        end function vsmc_mkl_brng_xorshift2x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift4x32
        end function vsmc_mkl_brng_xorshift4x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift8x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift8x32
        end function vsmc_mkl_brng_xorshift8x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift16x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift16x32
        end function vsmc_mkl_brng_xorshift16x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift32x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift32x32
        end function vsmc_mkl_brng_xorshift32x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift64x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift64x32
        end function vsmc_mkl_brng_xorshift64x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift128x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift128x32
        end function vsmc_mkl_brng_xorshift128x32
    end interface

    interface
        function vsmc_mkl_brng_xorshift1x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift1x64
        end function vsmc_mkl_brng_xorshift1x64
    end interface

    interface
        function vsmc_mkl_brng_xorshift2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift2x64
        end function vsmc_mkl_brng_xorshift2x64
    end interface

    interface
        function vsmc_mkl_brng_xorshift4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift4x64
        end function vsmc_mkl_brng_xorshift4x64
    end interface

    interface
        function vsmc_mkl_brng_xorshift8x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift8x64
        end function vsmc_mkl_brng_xorshift8x64
    end interface

    interface
        function vsmc_mkl_brng_xorshift16x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift16x64
        end function vsmc_mkl_brng_xorshift16x64
    end interface

    interface
        function vsmc_mkl_brng_xorshift32x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift32x64
        end function vsmc_mkl_brng_xorshift32x64
    end interface

    interface
        function vsmc_mkl_brng_xorshift64x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorshift64x64
        end function vsmc_mkl_brng_xorshift64x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow1x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow1x32
        end function vsmc_mkl_brng_xorwow1x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow2x32
        end function vsmc_mkl_brng_xorwow2x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow4x32
        end function vsmc_mkl_brng_xorwow4x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow8x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow8x32
        end function vsmc_mkl_brng_xorwow8x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow16x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow16x32
        end function vsmc_mkl_brng_xorwow16x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow32x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow32x32
        end function vsmc_mkl_brng_xorwow32x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow64x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow64x32
        end function vsmc_mkl_brng_xorwow64x32
    end interface

    interface
        function vsmc_mkl_brng_xorwow128x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow128x32
        end function vsmc_mkl_brng_xorwow128x32
    end interface
